# notion-formula-rs

./: .gitignore  Cargo.toml  README.md  cspell.json  justfile
.agent/: README.md
.agent/prompts/: 0-scrum.prompt.md  1-design.prompt.md  2-planning.prompt.md  3-summarizing.prompt.md  4-execution.prompt.md  5-verifying.prompt.md  ask.prompt.md  code.prompt.md  kb-api.prompt.md  kb-design.prompt.md  refine.prompt.md  review.prompt.md
.agent/tasklogs/: agent_kb.md  agent_scrum.md
.github/workflows/: pages.yml
analyzer/: Cargo.toml  README.md
analyzer/src/: ast.rs  completion.rs  diagnostics.rs  format.rs  lexer.rs  lib.rs  parser.rs  range.rs  source_map.rs  span.rs  text_edit.rs  token.rs  tokenstream.rs
analyzer/tests/: builtin_spec_sync.rs  diagnostics_golden.rs  diagnostics_snapshots.rs  format_golden.rs  format_snapshots.rs
analyzer_wasm/: Cargo.toml  README.md
analyzer_wasm/src/: converter.rs  lib.rs  offsets.rs  span.rs  text_edit.rs  view.rs
analyzer_wasm/src/converter/: analyze.rs  completion.rs  context.rs  mod.rs  shared.rs
analyzer_wasm/src/dto/: mod.rs  v1.rs
analyzer_wasm/tests/: analyze.rs
docs/: README.md  builtin_functions.md  changelog_entry_guidelines.md  overview-analyzer.md  signature-help.md
docs/_description_templates/: changelog_entry_template.md  design_contract_template.md  module_README_template.md
docs/builtin_functions/: README.md  justfile  prototype.cpp  prototype.hpp
docs/changelogs/: 20260207-add-docs-system.md  (+5 more)
docs/design/: README.md  ide.md  (+9 more)
evaluator/: Cargo.toml  README.md
ide/: Cargo.toml  README.md
(+306 files in other folders)
