[package]
name = "analyzer_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
analyzer = { path = "../analyzer" }
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
ts-rs = { version = "10", features = ["serde-compat"] }
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
